make querybuilder customizable
support subclassing SqlQuery
modernize java:
- remove TestUtils.createMap in favor of Map.of
- use java text blocks for multiline strings